apps/bazarr/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
spec:
  replicas: 1
  serviceName: bazarr
  selector:
    matchLabels:
      app.kubernetes.io/instance: bazarr
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: bazarr
        app.kubernetes.io/name: bazarr
    spec:
      containers:
        - name: bazarr
          image: bazarr
          ports:
            - name: http
              containerPort: 6767
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 180
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: run
              mountPath: /run
          securityContext:
            capabilities:
              add:
                - CHOWN
                - FOWNER
                - SETGID
                - SETUID
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: rclone-config
          configMap:
            name: bazarr-rclone
        - name: run
          emptyDir:
            medium: Memory
        - name: startup-config
          secret:
            secretName: bazarr
