apps/bazarr/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
spec:
  defaultBackend:
    service:
      name: bazarr
      port:
        name: http
